--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,12 @@
+//Colors
+$blue: #1c88bf;
+$grey: #666666;
+$dark-grey: #333333;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
+//Font size
+$font-size-large: 1.8rem;
+$font-size-small: 1.2rem;
 //Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
