--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,11 +3,13 @@ $blue: #1c88bf;
 $grey: #666666;
 $dark-grey: #333333;
 $dark-blue: #364051;
+$light-blue: #464b52;
 $off-white: #f7f7f7;
 //Font size
 $font-size-large: 1.8rem;
 $font-size-small: 1.2rem;
 //Spacing
+$xs-size: 0.4rem;
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
