--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,6 @@
 @import './components/inputs';
 @import './components/list';
 @import './components/loader';
+@import './components/modal';
 @import './components/page-header';
 @import './components/visibility';
