--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -7,6 +7,7 @@
     font-weight: 300;
     line-height: 1;
     padding: $s-size;
+    margin: $xs-size;
     text-decoration: none;
 }
 
@@ -16,4 +17,8 @@
 
 .button--secondary {
     background: #888888;
+}
+
+.button--alert {
+    background: #FF0050;
 }
