Update summary and add login with facebook

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,12 @@
 //Colors
 $blue: #1c88bf;
 $grey: #666666;
+$red: #ff0050;
 $dark-grey: #333333;
 $dark-blue: #364051;
-$light-blue: #464b52;
 $off-white: #f7f7f7;
+$fb-blue: #4267b2;
+
 //Font size
 $font-size-large: 1.8rem;
 $font-size-small: 1.2rem;
