--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -14,6 +14,10 @@
     padding: $l-size $m-size;
     text-align: center;
     width: 25rem;
+
+    button {
+        min-width: 20rem;
+    }
 }
 
 .box-layout__title {
