Login with github

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -6,6 +6,7 @@ $dark-grey: #333333;
 $dark-blue: #364051;
 $off-white: #f7f7f7;
 $fb-blue: #4267b2;
+$git-black: #24292e;
 
 //Font size
 $font-size-large: 1.8rem;
